--- a/Kafka/kafka-deployment.yaml
+++ b/Kafka/kafka-deployment.yaml
@@ -1,8 +1,9 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kafka
-  namespace: kafka
+  name: kafka-deployment
+  labels:
+        app: kafka
 spec:
   replicas: 1
   selector:
@@ -14,22 +15,30 @@ spec:
         app: kafka
     spec:
       containers:
-      - name: kafka
+      - name: broker
         image: confluentinc/cp-kafka:latest
         ports:
         - containerPort: 9092
-        envFrom:
-        - configMapRef:
-            name: kafka-config
         env:
+        - name: KAFKA_BROKER_ID
+          value: "1"
+        - name: KAFKA_ZOOKEEPER_CONNECT
+          value: 'zookeeper:2181'
+        - name: KAFKA_LISTENER_SECURITY_PROTOCOL_MAP
+          value: PLAINTEXT:PLAINTEXT,PLAINTEXT_INTERNAL:PLAINTEXT
         - name: KAFKA_ADVERTISED_LISTENERS
-          value: "PLAINTEXT://kafka:9092"
+          value: PLAINTEXT://:29092,PLAINTEXT_INTERNAL://kafka-service:9092
+        - name: KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR
+          value: "1"
+        - name: KAFKA_TRANSACTION_STATE_LOG_MIN_ISR
+          value: "1"
+        - name: KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR
+          value: "1"
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: kafka
-  namespace: kafka
+  name: kafka-service
 spec:
   ports:
   - port: 9092
