--- a/Kafka/zookeeper-deployment.yaml
+++ b/Kafka/zookeeper-deployment.yaml
@@ -1,8 +1,10 @@
+# zookeeper-deployment.yaml
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: zookeeper
-  namespace: kafka
+  labels:
+        app: zookeeper
 spec:
   replicas: 1
   selector:
@@ -18,18 +20,20 @@ spec:
         image: confluentinc/cp-zookeeper:latest
         ports:
         - containerPort: 2181
-        envFrom:
-        - configMapRef:
-            name: kafka-config
+        env:
+        - name: ZOOKEEPER_CLIENT_PORT
+          value: "2181"
+        - name: ZOOKEEPER_TICK_TIME
+          value: "2000"
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: zookeeper
-  namespace: kafka
 spec:
   ports:
   - port: 2181
     targetPort: 2181
   selector:
     app: zookeeper
+
