--- a/Web_application/Dockerfile
+++ b/Web_application/Dockerfile
@@ -1,24 +1,18 @@
-FROM python:3.8-slim
+# Use an official Python runtime as the base image
+FROM python:3.9-slim
 
-# Set environment variables
-ENV PYTHONDONTWRITEBYTECODE=1
-ENV PYTHONUNBUFFERED=1
-
-# Set work directory
+# Set the working directory in the container
 WORKDIR /app
 
-# Install system dependencies
-RUN apt-get update && \
-    apt-get install -y --no-install-recommends gcc libpq-dev && \
-    apt-get clean && \
-    rm -rf /var/lib/apt/lists/*
+# Copy the current directory contents into the container at /app
+COPY . /app
 
-# Install Python dependencies
-COPY requirements.txt requirements.txt
+# Install any needed dependencies specified in requirements.txt
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy project
-COPY . .
+# Make port 5000 available to the world outside this container
+EXPOSE 5000
 
-# Run the application
+# Run app.py when the container launches
 CMD ["python", "app.py"]
+
