--- a/Web_application/Dockerfile
+++ b/Web_application/Dockerfile
@@ -1,13 +1,25 @@
 # Use an official Python runtime as the base image
 FROM python:3.9-slim
 
+# Install necessary system dependencies including the correct version of libpq
+RUN apt-get update && apt-get install -y \
+    gcc \
+    g++ \
+    libsasl2-dev \
+    libsasl2-modules \
+    libssl-dev \
+    libffi-dev \
+    librdkafka-dev \
+    libpq-dev \
+    && rm -rf /var/lib/apt/lists/*
+
 # Set the working directory in the container
 WORKDIR /app
 
 # Copy the current directory contents into the container at /app
 COPY . /app
 
-# Install any needed dependencies specified in requirements.txt
+# Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
 # Make port 5000 available to the world outside this container
@@ -15,4 +27,3 @@ EXPOSE 5000
 
 # Run app.py when the container launches
 CMD ["python", "app.py"]
-
