--- a/Web_application/requirements.txt
+++ b/Web_application/requirements.txt
@@ -1,7 +1,8 @@
 Flask==2.0.1
+Werkzeug==2.0.1
 Flask-SQLAlchemy==2.5.1
 SQLAlchemy==1.4.22
-psycopg2-binary==2.9.1
+psycopg2==2.9.3
 Flask-Login==0.5.0
 Flask-Bcrypt==0.7.1
 confluent-kafka==1.7.0
